welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:33: error: not found: value fini
  case _ => fini=true;
            ^